services/kubia-svc-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
    
spec:
  clusterIP: None
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: http
