services/kubia-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  sessionAffinity: ClientIP
  selector:
    app: kubia
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: 8443
