services/kubia-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
  labels:
    name: kubia
spec:
  tls:
    - hosts:
        - "kubia.example.com"
      secretName: tls-secret
  rules:
  - host: kubia.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubia-nodeport
            port: 
              number: 80
